static/zenit-view.less
/* ... */
zenit-sidebar .sidebar-inner {
  left: 0;
  width: @sidebar-width;
  height: 100%;
  bottom: 0;
  background-color: @sidebar-color;
  border-right: 1px solid @sidebar-border-color;
  padding: 10px;
  position: relative;
  height: 100%;
  overflow: hidden;
  cursor: default;
  -webkit-user-select: none;
  min-width: @sidebar-min-width;
  z-index: 2;

  .octicon {
    padding: 0 6px;
  }
  
  .favorites-link, .quick-connect-link {
    color: @sidebar-link-color;
    text-transform: uppercase;
    font-weight: bold;
    cursor: default;
    padding: 7px 0;
  }

  .quick-connect-link {
    cursor: pointer;
  }

  .divider {
    display: block;
    margin-top: 8px;
    margin-bottom: 8px;
    border-bottom: 2px solid @sidebar-divider-color;
  }

  .favorites-list {
    margin-top: 8px;
    overflow: auto;
    height: 100%;

    .favorites-list-item {
      cursor: pointer;
      border-radius: 5px;
      padding: 4px;
      width: 100%;
      background-color: #FE7C66;
      display: block;
      margin-bottom: 4px;

      &:hover {
        background-color: darken(#FE7C66, 5%);
      }

      &.blue {
        background-color: #77CCFF;

        &:hover {
          background-color: darken(#77CCFF, 5%);
        }
      }

      &.green {
        background-color: #C2EC7F;

        &:hover {
          background-color: darken(#C2EC7F, 5%);
        }
      }
    }
  }

  .bottom-links {
    position: fixed;
    background-color: #EDEDED;
    padding: 5px;
    bottom: 0;
    border-top: 1px solid #D9D9D9;
    width: @sidebar-width - 1px;
    min-width: @sidebar-min-width - 1px;
    left: 0;

    & > span {
      cursor: pointer;
      font-size: 15px;

      &:hover {
        opacity: .9
      }

      &.octicon-info {
        float: right;
      }
    }
  }

  .view-resize-handle {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 8px;
    cursor: ew-resize;
    z-index: 3;
    right: -3px;
  }
}

zenit-view .view-inner {
  background-color: @view-color;
  width: 100%;
  height: 100%;
  cursor: default;
  -webkit-user-select: none;
}

.view {
  padding-bottom: 100px !important; // See https://github.com/zenit/zenit/issues/6

  &.centered {
    text-align: center;
  }

  &.connection {
    padding: 0 45px;
    position: relative;
    width: 100%;
    height: 100%;

    &.loading {
      opacity: .5;
      cursor: wait;

      & > .container, & > .btn.btn-connect {
        pointer-events: none;
      }
    }

    .title {
      font-weight: bold;
    }

    .container {
      background-color: #E4E4E4;
      padding: 12px 30px;
      text-align: left;

      .form-item {
        position: relative;
        width: 100%;
        display: inline-flex;
        align-items: center;
        margin-bottom: 6px;

        &:last-child {
          margin: 0;
        }
      }

      label {
        display: inline-block;
        font-size: 13px;
        width: 95px;
        top: -2px;
        position: relative;
        font-weight: bold;
      }

      input[type="text"],
      input[type="password"] {
        display: inline-block;
        font-size: 13px;
        -webkit-user-select: none;

        .input-mixin();
      }
    }

    .btn.btn-connect {
      margin: 12px 0;
      float: left;
      padding: 5px 12px;

      &:not(:last-child) {
        margin-right: 4px;
      }
    }
  }

  &.about {
    .logo {
      .version {
        font-size: 15px;
      }
    }
  }
}

.input-mixin {
  width: 100%;
  min-height: 25px;
  padding: 5px 10px;
  line-height: 1.6;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 4px;
  outline: 0;

  &:focus {
    border-color: #6db3fd;
    box-shadow: 2px 2px 0 #6db3fd,
      -2px -2px 0 #6db3fd,
      -2px 2px 0 #6db3fd,
      2px -2px 0 #6db3fd;
  }
}

.btn {
  display: inline-block;
  padding: 3px 8px;
  margin-bottom: 0;
  line-height: 1.4;
  white-space: nowrap;
  background-image: none;
  border: 1px solid transparent;
  border-radius: 4px;
  box-shadow: 0 1px 1px rgba(0,0,0,.06);
  cursor: pointer;

  &:focus {
    outline: 0;
    box-shadow: none
  }
}

.btn.btn-connect {
  color: #fff;
  text-shadow: 0 1px 1px rgba(0,0,0,.1);
  border-color: #388df8 #388df8 #0866dc;
  background-color: #6eb4f7;
  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#6eb4f7),color-stop(100%,#1a82fb));
  background-image: -webkit-linear-gradient(top,#6eb4f7 0,#1a82fb 100%);
  background-image: linear-gradient(to bottom,#6eb4f7 0,#1a82fb 100%);

  &:active {
    background-color: #3e9bf4;
    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#3e9bf4),color-stop(100%,#0469de));
    background-image: -webkit-linear-gradient(top,#3e9bf4 0,#0469de 100%);
    background-image: linear-gradient(to bottom,#3e9bf4 0,#0469de 100%)
  }
}

zenit-root /deep/ ::-webkit-scrollbar-track {
  background: transparent;
}

zenit-root /deep/ ::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

zenit-root /deep/ ::-webkit-scrollbar-thumb {
  border-radius: 4px;
  border: 3px solid #E0E0E0;
  background: #6A717C;
  background-clip: content-box;
}

// Animations and transitions
// NOTE: See http://elrumordelaluz.github.io/csshake/
// NOTE: Move this to a new file when too big
.shake {
  animation-duration: 100ms;
  animation-iteration-count: infinite;
  animation-name: shake-horizontal;
  animation-timing-function: ease-in-out;
}
/* ... */

